# docu_sphinx

./: .buildinfo  README.md  genindex.html  objects.inv  pyproject.toml  searchindex.js
.github/workflows/: sphinx.yml
content/: 1.html
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/content/: 1.doctree  rst.doctree
docs/_build/doctrees/notebooks/: chsh_solutions.doctree
docs/_build/html/: .buildinfo  index.html  search.html
docs/_build/html/content/: rst.html
docs/_build/html/notebooks/: chsh_solutions.html
docs/_static/: custom.css
docs/content/: 1.md  rst.rst
notebooks/: chsh_solutions.html
